tests/internal/negative_case/bad_flow_break_in_if_only.c
int f(int x) {
  if (x) {
    break;
  }
  return 0;
}
